# DSCubed

./: README.md  cursor_test.py
Week 1/: .env.example  .gitignore  README.md  calculator.py  get_stock_price.py  get_time.py  main.py  pyproject.toml
Week 1/src/: ask_ChatGPT.py
Week 1/src/Package/: __init__.py  calculator.py  core.py  get_stock_price.py  get_time.py  main.py  tool_call.py
Week 1/src/chatbot_functions/: __init__.py  calculator.py  get_stock_price.py  tool_call.py
Week 1/src/week_1.egg-info/: SOURCES.txt  requires.txt
venv practice/: hello.py  main.py  pyproject.toml
