[project]
name = "week-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "rich>=14.0.0",
    "tzdata>=2025.2",
    "yfinance>=0.2.64",
]
